Made events cancellable, nitpicks in EventTests